# electro_shop

./: .env.template  catalog_data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_text.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: default_table_fill.py
catalog/migrations/: 0001_initial.py  0002_category.py  0003_alter_product_product_category.py  0004_contacts.py  0005_version.py  0006_alter_version_product.py  0007_product_created_by.py  0008_product_product_is_published.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  contacts_list.html  home.html  product.html  product_detail.html  product_form.html  product_list.html  wrong_created_by.html
catalog/templates/catalog/includes/: inc_nav_bar.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
config/config/: settings.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_email_verify.py
users/templates/users/: confirm_register.html  login.html  password_recovery.html  register.html  user_form.html
